--- a/frontend/login.html
+++ b/frontend/login.html
@@ -21,6 +21,8 @@
             
             <form id="login-form" class="card-body">
 
+                <div id="message"></div>
+
                 <div class="form-group">
                   <input type="email" id="email" class="form-control" placeholder="Correo electrónico" autofocus required>
                 </div>
@@ -40,4 +42,5 @@
     </div>
     
 </body>
+<script type="module" src="js/login.js"></script>
 </html>
