Implementacion del boton cerrar sesion

--- a/frontend/dashboardPaciente.html
+++ b/frontend/dashboardPaciente.html
@@ -15,6 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <h2 class="navbar-brand">PsicoAgenda</h2>
+            <button onclick="borrarL()">Cerrar sesion</button>
         </div>
     </nav>
 
