--- a/frontend/dashboardPaciente.html
+++ b/frontend/dashboardPaciente.html
@@ -15,14 +15,15 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <h2 class="navbar-brand">PsicoAgenda</h2>
-            <button onclick="borrarL()">Cerrar sesion</button>
+                <img class="btn btn btn-outline-dark" src="./img/profile.png" 
+                class="img-thumbnail" alt="profile" onclick="borrarL()">
         </div>
     </nav>
 
 
-    <div class="row justify-content-start p-2">
+    <div class="row justify-content-start">
 
-        <div class="col-md-2 bg-light bg-gradient">
+        <div class="col-md-2 ps-4 pt-4  h-100 d-inline-block" id="menu">
             <ul class="uk-tab-right" uk-tab>
                 <li class="uk-active tab" id="tab-inicio"><a href="">Inicio</a></li>
                 <li class="tab"><a href="#" id="tab-agendar">Agendar cita</a></li>
@@ -30,7 +31,7 @@
             </ul>
         </div>
 
-        <div class="col-md-10">
+        <div class="col-md-10 pt-2 h-100 d-inline-block">
             <div id="inicio" class="option-panel">
               <div class="text-center">
                 <h3 id="saludo"></h3>
