--- a/frontend/dashboardPaciente.html
+++ b/frontend/dashboardPaciente.html
@@ -15,19 +15,31 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <h2 class="navbar-brand">PsicoAgenda</h2>
-                <img class="btn btn btn-outline-dark" src="./img/profile.png" 
-                class="img-thumbnail" alt="profile" onclick="borrarL()">
         </div>
     </nav>
 
 
     <div class="row justify-content-start">
 
-        <div class="col-md-2 ps-4 pt-4  h-100 d-inline-block" id="menu">
+        <div class="col-md-2 ps-4 pt-2" id="menu">
+
+            <div class="card text-center">
+                <div class="card-body bg-ligth">
+                    <img src="./img/perfil.png" class="img-fluid" alt="profile">
+                    <p id="nombre" class="card-text"></p>
+                </div>
+                <div class="card-footer">
+                    <a onclick="borrarL()"><img src="./img/salir.png" class="img-fluid" alt="salir">Salir</a>
+                </div>
+            </div>
+
+            <hr>
+            
             <ul class="uk-tab-right" uk-tab>
                 <li class="uk-active tab" id="tab-inicio"><a href="">Inicio</a></li>
                 <li class="tab"><a href="#" id="tab-agendar">Agendar cita</a></li>
                 <li class="tab"><a href="#" id="tab-historial">Citas anteriores</a></li>
+                <li class="tab"><a href="#" id="tab-perfil">Datos personales</a></li>
             </ul>
         </div>
 
@@ -43,6 +55,17 @@
                 Agendar cita
             </div>
             <div id="historial" class="option-panel" style="display: none;"></div>
+            <div id="perfil" class="option-panel" style="display: none;">
+                <h3 class="text-center">Datos personales</h3>
+                <div class="card">
+                    <div class="card-body pe-4">
+                        <p id="perfilNombre"></p>
+                        <p id="perfilCedula"></p>
+                        <p id="perfilMail"></p>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </div>
 
