--- a/frontend/dashboardPaciente.html
+++ b/frontend/dashboardPaciente.html
@@ -43,19 +43,34 @@
             </ul>
         </div>
 
-        <div class="col-md-10 pt-2 h-100 d-inline-block">
-            <div id="inicio" class="option-panel">
+        <div class="col-md-10">
+            <div id="message" class="text-center"></div>
+
+            <div id="inicio" class="option-panel pt-4">
               <div class="text-center">
                 <h3 id="saludo"></h3>
                 <p id="status"></p>
                 <div id="cita-info"></div>
               </div>
             </div>
-            <div id="agendar" class="option-panel" style="display: none;">
-                Agendar cita
+
+            <div id="agendar" class="option-panel  pt-4" style="display: none;">
+                <h3 class="text-center">Agendar cita</h3>
+                <div class="row">
+                    <div class="col-md-4 text-center">
+                        <h5>Psicólogos</h5>
+                        <div id="psicologos" class="d-flex flex-column"></div>
+                    </div>
+                    <div class="col-md-8">
+                        <h5>Turnos disponibles</h5>
+                        <id id="turnos-disponibles"></id>
+                    </div>
+                </div>
             </div>
-            <div id="historial" class="option-panel" style="display: none;"></div>
-            <div id="perfil" class="option-panel" style="display: none;">
+
+            <div id="historial" class="option-panel  pt-4" style="display: none;"></div>
+
+            <div id="perfil" class="option-panel  pt-4" style="display: none;">
                 <h3 class="text-center">Datos personales</h3>
                 <div class="card">
                     <div class="card-body pe-4">
@@ -64,8 +79,8 @@
                         <p id="perfilMail"></p>
                     </div>
                 </div>
-                
             </div>
+
         </div>
     </div>
 
