--- a/frontend/dashboardPsicologo.html
+++ b/frontend/dashboardPsicologo.html
@@ -55,6 +55,9 @@
 
             <div id="agendar" class="option-panel" style="display: none;">
                 Turnos actuales
+                <div class="col-md-8">
+                    <id id="turnos-disponibles"></id>
+                </div>
             </div>
             <div id="crear" class="option-panel" style="display: none;">
                 Crear Turnos
