form para crear turno

--- a/frontend/dashboardPsicologo.html
+++ b/frontend/dashboardPsicologo.html
@@ -61,6 +61,13 @@
             </div>
             <div id="crear" class="option-panel" style="display: none;">
                 Crear Turnos
+                <form>
+                    <label for="fecha">Fecha: </label>
+                    <input id="fecha" type="date" required> <br>
+                    <Label for="hora">Hora: </Label>
+                    <input id="hora" type="time" required> <br>
+                    <button type="submit" id="crear-button">Crear Turno</button>
+                </form>
             </div>
             <div id="historial" class="option-panel" style="display: none;"></div>
         </div>
