--- a/frontend/dashboardPsicologo.html
+++ b/frontend/dashboardPsicologo.html
@@ -61,12 +61,18 @@
             </div>
             <div id="crear" class="option-panel" style="display: none;">
                 Crear Turnos
-                <form>
-                    <label for="fecha">Fecha: </label>
-                    <input id="fecha" type="date" required> <br>
-                    <Label for="hora">Hora: </Label>
-                    <input id="hora" type="time" required> <br>
-                    <button type="submit" id="crear-button">Crear Turno</button>
+                <form id="form-turno"> 
+                    <div class="form-group">
+                        <label for="fecha" class="label-form">Fecha: </label>
+                        <input id="fecha" type="date" required> <br>
+                    </div>
+                    <div class="form-group">
+                        <Label for="hora" class="label-form">Hora: </Label>
+                        <input id="hora" type="time" required> <br>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" id="crear-button" class="btn btn-primary">Crear Turno</button>
+                    </div>
                 </form>
             </div>
             <div id="historial" class="option-panel" style="display: none;"></div>
