--- a/frontend/dashboardPsicologo.html
+++ b/frontend/dashboardPsicologo.html
@@ -40,6 +40,7 @@
                 <li class="tab"><a href="#" id="tab-citas">Citas</a></li>
                 <li class="tab"><a href="#" id="tab-agendar">Turnos</a></li>
                 <li class="tab"><a href="#" id="tab-creart">Crear turno</a></li>
+                <li class="tab"><a href="#" id="tab-perfil">Datos personales</a></li>
             </ul>
         </div>
 
@@ -103,6 +104,18 @@
                     </div>
                 </div>
             </div>
+
+            <div id="perfil" class="option-panel  pt-4" style="display: none;">
+                <h3 class="text-center">Datos personales</h3>
+                <div class="card">
+                    <div class="card-body pe-4">
+                        <p id="perfilNombre"></p>
+                        <p id="perfilCedula"></p>
+                        <p id="perfilMail"></p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
