N de turnos totales de un psicologo back y frontend, en el back tambien esta N de turnos totales para todos los psicologos

--- a/frontend/dashboardPsicologo.html
+++ b/frontend/dashboardPsicologo.html
@@ -48,11 +48,18 @@
             <div id="message" class="text-center"></div>
 
             <div id="inicio" class="option-panel pt-4">
-              <div class="text-center">
-                <h3 id="saludo"></h3>
-                <p id="status"></p>
-                <div id="cita-info"></div>
-              </div>
+                <div class="text-center">
+                    <h3 id="saludo"></h3>
+                    <p id="status"></p>
+                    <div id="cita-info">
+                        <div class="card text-center">
+                            <div class="card-header">
+                                Division de turnos
+                            </div>
+                            <div class="card-body" id="nEstadisticas"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div id="agendar" class="option-panel pt-4" style="display: none;">
